[gd_scene load_steps=8 format=3 uid="uid://bfffqx5sge7xg"]

[ext_resource type="Script" path="res://Scripts/Objects/JumpPad.gd" id="1_geb7g"]
[ext_resource type="Texture2D" uid="uid://bqd1rtloxmmd6" path="res://Assets/Tiles/Seasonal Tilesets/5 - Misc. universal tiles/trampolin-Sheet.png" id="2_hmwh1"]
[ext_resource type="AudioStream" uid="uid://dxry6smosyopr" path="res://Assets/SFX/FX/jumpPadHeavy.wav" id="3_pke3l"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_emmcd"]
size = Vector2(20, 11)

[sub_resource type="Animation" id="Animation_buuow"]
resource_name = "jump_pad_action"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_hmwh1")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 0]
}

[sub_resource type="Animation" id="Animation_0f3ny"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_hmwh1")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hk45o"]
_data = {
"RESET": SubResource("Animation_0f3ny"),
"jump_pad_action": SubResource("Animation_buuow")
}

[node name="JumpPad" type="Node2D"]
script = ExtResource("1_geb7g")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_hmwh1")
centered = false
hframes = 6

[node name="Area2D" type="Area2D" parent="."]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(16, 26.5)
shape = SubResource("RectangleShape2D_emmcd")

[node name="JumpPadActive" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_hk45o")
}

[node name="JumpPadSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_pke3l")
volume_db = -20.0

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
